detail page spacing fixed and make username link to the profile

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -14,7 +14,9 @@
 
 #id_description{
     width: 50em;
-    height:5em;
+    height:3em;
+    padding: 12px 20px;
+    border: 2px solid #ccc;
 }
 
 
